# fantasy_war

HelloC/: settings.gradle
HelloC/app/: build.gradle  proguard-rules.pro
HelloC/app/src/main/: AndroidManifest.xml
HelloC/app/src/main/assets/shader/: alpha.frag  alpha.vert  dot.frag  dot.vert  drawCircle.frag  drawLine.frag  drawRect.frag  drawTri.frag  fillRect.frag  fillTri.frag  test.frag  test.vert
HelloC/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
HelloC/app/src/main/cpp/game/: DrawCounters.cpp  DrawCounters.h  Intro.cpp  Intro.h  LoadMap.cpp  LoadMap.h  Menu.cpp  Menu.h  Proc.cpp  Proc.h  ProcUI_Commander.cpp  ProcUI_Commander.h  ProcUI_MapKey.cpp  ProcUI_MapKey.h  ProcUI_MiniMap.cpp  ProcUI_MiniMap.h  ProcUI_RegimentInfo.cpp  ProcUI_RegimentInfo.h  RegimentAction.cpp  RegimentAction.h  RegimentMgr.cpp  RegimentMgr.h  Test.cpp  Test.h  TextGroup.cpp  TextGroup.h
HelloC/app/src/main/cpp/gls/: iColor.cpp  iColor.h  iFBO.cpp  iFBO.h  iGraphics.h  iGraphics_Android.cpp  iGraphics_Windows.cpp  iImage.cpp  iImage.h  iMatrix.cpp  iMatrix.h  iOpenGL.cpp  iOpenGL.h  iPage.cpp  iPage.h  iParticleSystem.cpp  iParticleSystem.h  iPopup.cpp  iPopup.h  iStrTex.cpp  iStrTex.h
HelloC/app/src/main/cpp/main/: Game.cpp  Game.h  Loading.cpp  Loading.h  Sound.cpp  Sound.h  iControl.cpp  iControl.h  iPopWindow.cpp  iPopWindow.h  iVolume.cpp  iVolume.h
HelloC/app/src/main/cpp/std/: iFPS.cpp  iFPS.h  iNDK.cpp  iNDK.h  iOpenAL.cpp  iOpenAL.h  iPoint.cpp  iPoint.h  iRect.cpp  iRect.h  iStd.cpp  iStd.h  iString.cpp  iString.h  iType.h
HelloC/app/src/main/java/win/gatewalker/game/: App.java  SoundP.java
HelloC/app/src/main/java/win/gatewalker/helloc/: MainActivity.java
HelloC/app/src/main/java/win/gatewalker/lib/: Audio.java  Native.java
HelloC/app/src/main/res/layout/: activity_main.xml
HelloC/app/src/main/res/mipmap-anydpi-v26/: ic_portfolio.xml
HelloC/app/src/main/res/values/: ic_Portfolio_background.xml  strings.xml  themes.xml
HelloC/app/src/main/res/values-night/: themes.xml
HelloC/gradle/wrapper/: gradle-wrapper.properties
